@@ -15,6 +15,7 @@
   Closes bug #330 (Cannot save, pdftk failure to access /tmp)
 * Fix --import option. Closes Debian bug #934107
   (Importing with --import=file.pdf does not import anything)
+* Fix updating extended page numbering on scan dialog after changing document
 
 
 2.5.5 (19.07.2019):
